--- a/index.html
+++ b/index.html
@@ -113,9 +113,10 @@ function oute(text) {
 }
 
 //runs the code in the textarea whose id is code
-function runit() { 
-   //var prog = document.getElementById("code").value;
-   var prog = myCodeMirror.doc.getValue();
+function runit(recurse) { 
+   recurse = recurse || false;
+   var prog = document.getElementById("code").value;
+   //var prog = myCodeMirror.doc.getValue();
    reset(); 
    // Sk.canvas = "mycanvas";
    Sk.pre = "output";
@@ -125,8 +126,28 @@ function runit() {
      Sk.importMainWithBody("<stdin>",false,prog);
    }
    catch(e){
-     // window.e = e;
-     oute("Line "+Sk.currLineNo+": "+e.tp$name+": "+e);
+     window.e = e;
+     if (e.tp$name=="ImportError"){
+       fn = e.args.v[0].v.split(" ").slice(-1)[0] + ".py";
+       //try to import the external module before reporting the error.
+       bucket = fn.slice(0,fn.indexOf("_"));
+       //cds = "http://codeskulptor-"+bucket+".commondatastorage.googleapis.com/"+fn;
+       cds = "https://raw.githubusercontent.com/"+hash;
+       yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
+       console.log("ook");
+       console.log(yql);
+       $.get(yql,function(r){
+         window.YQLResponse=r;
+         //$("#code").text(r.firstChild.firstChild.firstChild.children[3].textContent);
+         Sk.builtinFiles.files["./"+fn]=r.firstChild.firstChild.firstChild.children[3].textContent;
+         if (!recurse){
+           runit(true);
+         }
+       });
+       oute("Line "+Sk.currLineNo+": "+e.tp$name+": "+e);
+       Sk.error = e;
+     }
+     
      try {
        Sk.simplegui.cleanup();
      } 
@@ -165,6 +186,24 @@ if(window.location.hash) {
 }
 console.log('window.location.hash parsed')
 */
+
+//catch a github filename hash, fetch that file, and put it in the textarea
+if(window.location.hash) {
+  var hash = window.location.hash.substring(1); //Puts hash in variable, removes # char
+  bucket = hash.slice(0,hash.indexOf("_"));
+  //cds = "http://codeskulptor-"+bucket+".commondatastorage.googleapis.com/"+hash;
+  cds = "https://raw.githubusercontent.com/"+hash;
+  //yql = 'https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20html%20where%20url%3D%22'+escape(cds)+'%22';
+  yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
+  console.log(yql);
+  $.get(yql,function(r){
+    //$("#source").text(':'+r.documentElement.children[0].children[0].children[0].textContent+':');
+    window.YQLResponse=r;
+    //$("#code").text(r.firstChild.firstChild.firstChild.children[3].textContent);
+    //myCodeMirror = CodeMirror.fromTextArea(code);
+    myCodeMirror.doc.setValue(r.firstChild.firstChild.firstChild.children[3].textContent);
+  });
+}
 </script>
 </head>
 <body>
