--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ function runit(recurse) {
    }
    catch(e){
      window.e = e;
+     console.log(e.tp$name);
      if (e.tp$name=="ImportError"){
        fn = e.args.v[0].v.split(" ").slice(-1)[0] + ".py";
        //try to import the external module before reporting the error.
@@ -147,7 +148,30 @@ function runit(recurse) {
        oute("Line "+Sk.currLineNo+": "+e.tp$name+": "+e);
        Sk.error = e;
      }
-     
+     if (e.tp$name=="SyntaxError"){
+     	if (e.args.v[3][2].slice(0,6)=="import"){
+	       //fn = e.args.v[0].v.split(" ").slice(-1)[0] + ".py";
+	       fn = e.args.v[3][2].slice(7,-1)
+	       //try to import the external module before reporting the error.
+	       //bucket = fn.slice(0,fn.indexOf("_"));
+	       //cds = "http://codeskulptor-"+bucket+".commondatastorage.googleapis.com/"+fn;
+	       cds = "https://raw.githubusercontent.com/"+hash;
+	       yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
+	       console.log("ook");
+	       console.log(yql);
+	       $.get(yql,function(r){
+	         window.YQLResponse=r;
+	         //$("#code").text(r.firstChild.firstChild.firstChild.children[3].textContent);
+	         Sk.builtinFiles.files["./"+fn]=r.firstChild.firstChild.firstChild.children[3].textContent;
+	         if (!recurse){
+	           runit(true);
+	         }
+     		});
+	       oute("Line "+Sk.currLineNo+": "+e.tp$name+": "+e);
+	       Sk.error = e;
+       	}
+     }
+
      try {
        Sk.simplegui.cleanup();
      } 
