--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ function runit(recurse) {
        //cds = "http://codeskulptor-"+bucket+".commondatastorage.googleapis.com/"+fn;
        cds = "https://raw.githubusercontent.com/"+hash;
        yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
-       console.log("ook");
+       console.log("fixing Import Error "+cds);
        console.log(yql);
        $.get(yql,function(r){
          window.YQLResponse=r;
@@ -157,7 +157,7 @@ function runit(recurse) {
 	       //cds = "http://codeskulptor-"+bucket+".commondatastorage.googleapis.com/"+fn;
 	       cds = "https://raw.githubusercontent.com/"+hash;
 	       yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
-	       console.log("ook");
+	       console.log("fixing Syntax Error "+cds);
 	       console.log(yql);
 	       $.get(yql,function(r){
 	         window.YQLResponse=r;
