--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ function oute(text) {
 //runs the code in the textarea whose id is code
 function runit(recurse) { 
    recurse = recurse || 0;
+   console.log("Recurse:"+CStr(recurse));
    //var prog = document.getElementById("code").value;
    var prog = myCodeMirror.doc.getValue();
    reset(); 
@@ -142,9 +143,9 @@ function runit(recurse) {
          //$("#code").text(r.firstChild.firstChild.firstChild.children[3].textContent);
          Sk.builtinFiles.files["./"+fn]=r.firstChild.firstChild.firstChild.children[3].textContent;
          //if (!recurse){
-         if (recurse<2){
+         if (recurse<5){
            //runit(true);
-           runit(recurse+1)
+           runit(recurse+1);
          }
        });
        oute("Line "+Sk.currLineNo+": "+e.tp$name+": "+e);
@@ -166,9 +167,9 @@ function runit(recurse) {
 	         //$("#code").text(r.firstChild.firstChild.firstChild.children[3].textContent);
 	         Sk.builtinFiles.files["./"+fn]=r.firstChild.firstChild.firstChild.children[3].textContent;
 	         //if (!recurse){
-	         if (recurse<2){
+	         if (recurse<5){
 	           //runit(true);
-	           runit(recurse+1)
+	           runit(recurse+1);
 	         }
      		});
 	       oute("Line "+Sk.currLineNo+": "+e.tp$name+": "+e);
