--- a/index.html
+++ b/index.html
@@ -130,9 +130,10 @@ function runit(recurse) {
      window.e = e;
      console.log(e.tp$name);
      if (e.tp$name=="ImportError"){
-       fn = e.args.v[0].v.split(" ").slice(-1)[0] + ".py";
+       //fn = e.args.v[0].v.split(" ").slice(-1)[0] + ".py";
+       fn = e.args.v[3][2].slice(7,-1).replace('.','/')+".py";
        //try to import the external module before reporting the error.
-       bucket = fn.slice(0,fn.indexOf("_"));
+       //bucket = fn.slice(0,fn.indexOf("_"));
        //cds = "http://codeskulptor-"+bucket+".commondatastorage.googleapis.com/"+fn;
        cds = "https://raw.githubusercontent.com/"+hash;
        yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
@@ -151,6 +152,7 @@ function runit(recurse) {
        oute("Line "+Sk.currLineNo+": "+e.tp$name+": "+e);
        Sk.error = e;
      }
+     /*
      if (e.tp$name=="SyntaxError"){
      	if (e.args.v[3][2].slice(0,6)=="import"){
 	       //fn = e.args.v[0].v.split(" ").slice(-1)[0] + ".py";
@@ -175,7 +177,7 @@ function runit(recurse) {
 	       oute("Line "+Sk.currLineNo+": "+e.tp$name+": "+e);
 	       Sk.error = e;
        	}
-     }
+     }*/
 
      try {
        Sk.simplegui.cleanup();
