--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ function runit(recurse) {
 		       //try to import the external module before reporting the error.
 		       //bucket = fn.slice(0,fn.indexOf("_"));
 		       //cds = "http://codeskulptor-"+bucket+".commondatastorage.googleapis.com/"+fn;
-		       cds = "https://raw.githubusercontent.com/"+g+hash;
+		       cds = "https://raw.githubusercontent.com/"+g+hash+".py";
 		       yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
 		       console.log("fixing Import Error "+cds);
 		       console.log(yql);
