--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ function oute(text) {
 //runs the code in the textarea whose id is code
 function runit(recurse) { 
    recurse = recurse || 0;
-   console.log("Recurse:"+recurse.toString());
+   console.log("Recurse: "+recurse.toString());
    //var prog = document.getElementById("code").value;
    var prog = myCodeMirror.doc.getValue();
    reset(); 
@@ -131,24 +131,25 @@ function runit(recurse) {
      console.log(e.tp$name);
      if (e.tp$name=="ImportError"){
        fn = e.args.v[0].v.split(" ").slice(-1)[0];
-       console.log(fn);
+       console.log("Filename: "+fn);
        path = Sk.sysmodules['string sys'].items[0]['rhs'].$d.path.v || undefined;
-       console.log(path)
        for (var p in path){
        	       p = path[p].v;
+       	       console.log("Path:"+p)
                if (p.slice(0,11)=="github.com/") {
 	       	       g = p.replace("github.com","");
+	       	       fn = "/"+hash+".py"
 		       //try to import the external module before reporting the error.
 		       //bucket = fn.slice(0,fn.indexOf("_"));
 		       //cds = "http://codeskulptor-"+bucket+".commondatastorage.googleapis.com/"+fn;
-		       cds = "https://raw.githubusercontent.com/"+g+hash+".py";
+		       cds = "https://raw.githubusercontent.com/"+g+fn;
 		       yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
 		       console.log("fixing Import Error "+cds);
 		       console.log(yql);
 		       $.get(yql,function(r){
 		         window.YQLResponse=r;
 		         //$("#code").text(r.firstChild.firstChild.firstChild.children[3].textContent);
-		         Sk.builtinFiles.files["./"+fn]=r.firstChild.firstChild.firstChild.children[3].textContent;
+		         Sk.builtinFiles.files[p+fn]=r.firstChild.firstChild.firstChild.children[3].textContent;
 		         //if (!recurse){
 		         if (recurse<5){
 		           //runit(true);
@@ -208,7 +209,7 @@ if(window.location.hash) {
   cds = "https://raw.githubusercontent.com/"+hash;
   //yql = 'https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20html%20where%20url%3D%22'+escape(cds)+'%22';
   yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
-  console.log("Importing hash:"+yql);
+  console.log("Importing hash: "+yql+"\n";
   $.get(yql,function(r){
     //$("#source").text(':'+r.documentElement.children[0].children[0].children[0].textContent+':');
     window.YQLResponse=r;
