--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ if(window.location.hash) {
   cds = "https://raw.githubusercontent.com/"+hash;
   //yql = 'https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20html%20where%20url%3D%22'+escape(cds)+'%22';
   yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
-  console.log("Importing hash: "+yql+"\n";
+  console.log("Importing hash: "+yql+"\n");
   $.get(yql,function(r){
     //$("#source").text(':'+r.documentElement.children[0].children[0].children[0].textContent+':');
     window.YQLResponse=r;
