updated default python code

--- a/index.html
+++ b/index.html
@@ -238,11 +238,9 @@ if(window.location.hash) {
     <div id="python" style="display:inline-block;width:49%;border:0px solid blue;">
       <textarea id="code" rows="30" style="width:98%;">
 import simplegui
-print "Hello World"
-print dir(simplegui)
 
 def draw(canvas):
-    canvas.draw_text("Hello, World!", (20,20), 15, "white", "sans-serif")
+    canvas.draw_text("Hello, there!", (20,20), 15, "white", "sans-serif")
     pass
 def click(pos):
     print pos
@@ -251,10 +249,9 @@ frame = simplegui.create_frame("test",320,200,100)
 frame.set_canvas_background("black")
 frame.set_draw_handler(draw)
 frame.set_mouseclick_handler(click)
+frame.set_mousedrag_handler(click)
 frame.start()
 
-for z in range(40):
-    print z
 </textarea>
     </div python> 
 
