--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ function runit(recurse) {
 		       //try to import the external module before reporting the error.
 		       //bucket = fn.slice(0,fn.indexOf("_"));
 		       //cds = "http://codeskulptor-"+bucket+".commondatastorage.googleapis.com/"+fn;
-		       cds = "https://raw.githubusercontent.com/"+fna;
+		       cds = "https://raw.githubusercontent.com/"+fna.replace('/blob/','');
 		       yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
 		       console.log("fixing Import Error "+cds);
 		       console.log(yql);
@@ -206,7 +206,7 @@ if(window.location.hash) {
   var hash = window.location.hash.substring(1); //Puts hash in variable, removes # char
   bucket = hash.slice(0,hash.indexOf("_"));
   //cds = "http://codeskulptor-"+bucket+".commondatastorage.googleapis.com/"+hash;
-  cds = "https://raw.githubusercontent.com/"+hash;
+  cds = "https://raw.githubusercontent.com/"+hash.replace('/blob/','');
   //yql = 'https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20html%20where%20url%3D%22'+escape(cds)+'%22';
   yql = 'https://query.yahooapis.com/v1/public/yql?env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&q=select%20*%20from%20data.headers%20where%20url%3D%22'+escape(cds)+'%22';
   console.log("Importing hash: "+yql+"\n");
