changed page title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="http://codemirror.net/mode/python/python.js"></script>
   
   <meta charset="utf-8">
-  <title>CodeSkulptor</title>
+  <title>SkulptShare</title>
   <style>
     bt{	display:inline;
     	color:#2B60DE;
